# api/swagger.yaml
@@ -55,6 +55,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorBadRequest'
+        '404':
+          description: Not Found
   /auth/register:
     post:
       summary: Register New User
@@ -119,8 +121,18 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/AuthTokens'
-        '404':
-          description: Not Found
+        '400':
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorBadRequest'
+        '409':
+          description: Conflict
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorConflict'
   /auth/send_reset_token:
     post:
       summary: Send Reset Password Token To User
@@ -147,8 +159,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorBadRequest'
-        '404':
-          description: Not Found
+        '409':
+          description: Conflict
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorConflict'
   /auth/password_reset_with_token:
     post:
       summary: Password Reset With Token
@@ -179,13 +195,19 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorBadRequest'
-        '404':
-          description: Not Found
+        '409':
+          description: Conflict
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorConflict'
   /auth/password_reset_with_old:
     post:
       summary: Password Reset With Old Password
       tags:
         - password
+      security:
+        - BearerAuth: []
       requestBody:
         content:
           application/json:
@@ -210,8 +232,14 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorBadRequest'
-        '404':
-          description: Not Found
+        '401':
+          description: Unauthorized
+        '409':
+          description: Conflict
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorConflict'
   /auth/logout:
     post:
       summary: Forget Device
